Comment code in index.html for gh-pages

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     </style>
     <!-- ТО ДЄРЬМО ТРЕБА ДЛЯ  GitHub Pages -->
     <!-- Start Single Page Apps for GitHub Pages -->
-    <script type="text/javascript">
-      // Single Page Apps for GitHub Pages
+    <!-- <script type="text/javascript"> -->
+    <!-- // Single Page Apps for GitHub Pages
       // MIT License
       // https://github.com/rafgraph/spa-github-pages
       // This script checks to see if a redirect is present in the query string,
@@ -66,7 +66,7 @@
           );
         }
       })(window.location);
-    </script>
+    </script> -->
     <!-- End Single Page Apps for GitHub Pages -->
   </head>
   <body>
