Comment 404 html for gh-pages

--- a/public/404.html
+++ b/public/404.html
@@ -1,6 +1,6 @@
 <!-- ЦЯ ХУЙНЯ ПОТРІБНА ЩОБ НЕ БУЛО 404 НА СРАНИХ GITHUB PAGES -->
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -49,4 +49,4 @@
     </script>
   </head>
   <body></body>
-</html>
+</html> -->
